# plataforma_data_squad

./: .pre-commit-config.yaml  app.py  pyproject.toml  requirements.txt
paginas/: cursos.py  home.py
