[tool.poetry]
name = "plataforma-data-squad"
version = "0.1.0"
description = ""
authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
mkdocs = "^1.5.3"
black = "^24.4.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
mkdocs-material = "^9.5.18"
taskipy = "^1.12.2"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
